# programming_projects

./: .gitignore
C/: CMakeLists.txt  cat.c  main.c  main.h  main.h.in
CPP/: CMakeLists.txt
Python/: main.py
Python/AI/: __init__.py
Python/core/: __init__.py
Python/my_turtle/: __init__.py
Rust/: Cargo.toml  build.py
Rust/milans-pyo3-library/: Cargo.toml
Rust/milans-rust-core/: Cargo.toml
Rust/milans-rust-library/: Cargo.toml
Rust/milans-rust-library/src/math/: mod.rs  primality.rs
Rust/milans-rust-proc-macros/: Cargo.toml
Rust_Cargo/: Cargo.toml  build.py  script.py
Rust_Cargo/milans_proc_macros/: Cargo.toml
Rust_Cargo/milans_pyo3_library/: Cargo.toml
Rust_Cargo/milans_pyo3_library/src/: lib.rs
Rust_Cargo/milans_rust_core/: Cargo.toml
Rust_Cargo/milans_rust_core/src/: lib.rs  sorting.rs
Rust_Cargo/milans_rust_core/src/compression/: mod.rs
Rust_Cargo/milans_rust_core/src/math/: graph.rs  mod.rs  primality.rs  primes.rs
Rust_Cargo/milans_rust_logging/: Cargo.toml
Rust_Cargo/milans_rust_logging/src/: lib.rs
Rust_Cargo/milans_rust_proc_macros/: Cargo.toml
Rust_Cargo/resources/: log.yaml  log.yml
Rust_Cargo/src/: lib.rs  main.rs
