[workspace]
members = ["milans_rust_core","milans_rust_proc_macros","milans_pyo3_library"]

[package]
name = "milans_rust_library"
version = "0.1.0"
edition = "2021"
autobins = false
autoexamples = false

[profile.dev]
opt-level = 2
lto = "thin"

[[bin]]
name = "milans_rust_executable"
path = "src/main.rs"

[dependencies]
milans_rust_core = { version = "0.1.0", path = "milans_rust_core" }
