cargo-features=["edition2024"]

[package]
name = "milans-rust-library"
version = "0.1.0"
edition = "2024"

[lib]
name = "milans_rust_library"

[dependencies]
milans-rust-core = { version = "0.1.0", path = "../milans-rust-core" }
milans-rust-proc-macros = { version = "0.1.0", path = "../milans-rust-proc-macros" }
num = "0.4.3"
num-bigint = "0.4.5"
num-complex = "0.4.6"
rust_decimal = "1.35.0"
