[package]
name = "milans_pyo3_library"
version = "0.1.0"
edition = "2021"

[dependencies]
milans_rust_core = { version = "0.1.0", path = "../milans_rust_core" }
num = "0.4.3"
num-bigint = "0.4.5"
num-complex = "0.4.6"
pyo3 = {version="0.21.2",features=["extension-module","num-bigint","num-complex","rust_decimal","multiple-pymethods"]}
rust_decimal = "1.35.0"

[lib]
crate-type=["cdylib","rlib"]
