[package]
name = "milans_rust_core"
version = "0.1.0"
edition = "2021"

[dependencies]
num={version = "0.4.1"}
num-bigint = {version = "0.4.4"}
log={version="0.4.21"}
log4rs={version="1.3.0"}
lazy_static = "1.4.0"
pyo3={version = "0.20.3", features = ["num-bigint","num-complex","rust_decimal","extension-module"] }


[features]
default = ["log","concurrent-log"]
log = []
concurrent-log = []
debug = []
pyo3 = []
