[package]
name = "milans_rust_proc_macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro=true

[dependencies]
milans_rust_core = { version = "0.1.0", path = "../milans_rust_core" }
proc-macro2 = "1.0.85"
quote = "1.0.36"
r3bl_rs_utils = "0.9.15"
syn = {version="2.0.66",features=["extra-traits"]}
